fixed the alignment of icons in footer for small screens for the index page

--- a/style.css
+++ b/style.css
@@ -43,6 +43,12 @@ li {
     justify-content: center;
 }
 
+.linksContainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .fa {
     color: white !important;
 }
